--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Chat Hack</title>
+    <title></title>
   </head>
   <body>
-    <section id="app"></section>
+    <p>
+      <button id="send">Send Message</button>
+      <button id="close">Close</button>
+    </p>
+    <ul id="log"></ul>
     <script src="dist/bundle.js"></script>
   </body>
 </html>
