--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,19 @@
       <button id="close">Close</button>
     </p>
     <ul id="log"></ul>
+
+    <chat-window>
+      <ul id="transcript">
+        <li id="status">Connecting</li>
+      </ul>
+      <form class="message-form" method="post">
+        <textarea class="message-field" rows="8" cols="80" required></textarea>
+        <button class="btn-submit" type="submit">Send</button>
+        <button class="btn-close" type="button">Close</button>
+      </form>
+    </chat-window>
+
+
     <script src="dist/bundle.js"></script>
   </body>
 </html>
