Multi client messages

--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,9 @@
     </style>
   </head>
   <body>
-    <p>
-      <button id="send">Send Message</button>
-      <button id="close">Close</button>
-    </p>
+    <textarea id="message" placeholder="Write a message fool..."></textarea>
+    <button id="send">Send Message</button>
+    <button id="close">Close</button>
     <ul id="log"></ul>
     <script src="client.js"></script>
   </body>
