--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,13 @@
     </style>
   </head>
   <body>
-    <textarea id="message" placeholder="Write a message fool..."></textarea>
-    <button id="send">Send Message</button>
-    <button id="close">Close</button>
-    <ul id="log"></ul>
+    <!-- Put in HTML file inside -->
+    <section id="form">
+      <textarea id="message" placeholder="Write a message fool..."></textarea>
+      <button id="send">Send Message</button>
+      <button id="close">Close</button>
+      <ul id="log"></ul>
+    </section>
     <script src="client.js"></script>
   </body>
 </html>
