--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <style>
+      body {
+        font-family:'Avenir Next', 'Avenir', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        text-align:center;
+        font-size: 10px;
+        line-height: 1.4;
+        overflow: hidden;
+      }
+    </style>
     <link rel="import" href="./chat-window/chat-window.html" />
   </head>
   <body>
