added system message

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,6 @@
     <link rel="import" href="./chat-window/chat-window.html" />
   </head>
   <body>
-    <chat-window></chat-window>
+    <chat-window id=1234></chat-window>
   </body>
 </html>
